src/objects/Credit_Note_Item__c.object
<CustomObject>
    <description>[25 Feb 2016] [Credit Note CR] Credit Note Item stores the breakdown of the Credit Note information by Invoice</description>
    <fields>
        <fullName>Amt_After_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <description>After Tax Amount based on Zuora Invoice Charge Amount</description>
        <label>Amount After Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Before_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Before Tax Amount based on Zuora Invoice Charge Amount</description>
        <label>Amount Before Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <description>Parent Credit Note Record</description>
        <label>Credit Note</label>
        <referenceTo>Credit_Note__c</referenceTo>
        <relationshipLabel>Credit Note Items</relationshipLabel>
        <relationshipName>Credit_Note_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Invoice Date of the Invoice</description>
        <formula>Invoice__r.Zuora__InvoiceDate__c</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Invoice which this Credit Note Item is created for</description>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Credit Note Items</relationshipLabel>
        <relationshipName>Credit_Note_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tax Amount based on Zuora Invoice Charge Amount</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tax Exempt Amount based on Zuora Invoice Charge Amount</description>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <formula>Credit_Note__r.Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Credit Note Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CNI-{00000000}</displayFormat>
        <label>Credit Note Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>